Fix misaligned advanced search fields in Firefox.

--- a/src/stylesheets/advanced_search.scss
+++ b/src/stylesheets/advanced_search.scss
@@ -6,6 +6,15 @@
       gap: 4px;
     }
 
+    .form-group {
+      display: inline-block;
+      margin: 0;
+
+      > div {
+        display: inline-block;
+      }
+    }
+
     input[type="text"] {
       width: 40em;
     }
@@ -14,6 +23,10 @@
       .form-group {
         margin: 5px 20px 0 2px;;
       }
+    }
+
+    .filter-op-value-inputs {
+      margin: 15px 0;
     }
   }
 
